# CustomDigitDataset

./: CMakeLists.txt  README.md  main.cpp  verify.cpp
data/: README.txt
